[package]
name = "tempor"
version = "0.2.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"
license = "MIT"
keywords = ["tempo", "beat", "tap"]
categories = ["multimedia::audio"]
description = "Tempo related utilities for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"

[dev-dependencies]
midir = "0.7.0"
termion = "1.5.6"
